# GBMaker

./: .gitignore  LICENSE  ManualGB.py  README.md  ScanGB.py  gb_maker.py  gbmaker.py  pyproject.toml
examples/BaTiO3/: 111_twin_boundary.py  POSCAR-bulk
examples/Cu3AsS4/: 100_stacking_fault.py  POSCAR-bulk
examples/CuPbSbS3/: 011_domain_wall.py
examples/CuPbSbS3/011/: ManualGB.py  POSCAR-GB  POSCAR-slab-0  POSCAR-slab-10  POSCAR-slab-12  POSCAR-slab-3  POSCAR-slab-4  POSCAR-slab-5  POSCAR-slab-8  POSCAR-slab-9
examples/FAPbI3/: 210_grain_boundary.py  POSCAR-bulk
examples/Fe3O4/: POSCAR-bulk  tilt_grain_boundary.py
examples/MgO/: 11-2_grain_boundary.py  11-2_grain_boundary_reconstruction.py  11-2_grain_boundary_scan.py  111_stacking_fault.py  111_twin_boundary.py  111_twin_boundary_converge.py  310_grain_boundary.py  310_twin_boundary.py  POSCAR  POSCAR-112
examples/MgO/310/: ManualGB.py  POSCAR-slab-0  test.py
examples/Sb2Se3/: 011_grain_boundary.py  POSCAR-bulk
examples/mHfO2/: 100-101_asymm_grain_boundary.py  POSCAR-bulk
gbmaker/: __init__.py  gbmaker.py  grain.py  grain_boundary.py  utils.py  warnings.py
tests/CuPbSbS3/011/: ManualGB.py  POSCAR-bulk  POSCAR-slab-1  POSCAR-slab-11  POSCAR-slab-2  POSCAR-slab-6  POSCAR-slab-7  gbmaker.py
tests/MgO/310/: ManualGB.py  POSCAR-GB
tutorial/: GBMaker.ipynb  bulk-POSCAR  ouc_POSCAR
