[tool.poetry]
name = "gbmaker"
version = "0.1.0"
description = "A grain boundary generator built on top of pymatgen"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymatgen = "^2022.0.6"
vtk = {version = "^9.0.1", optional = true}
jupyterlab = {version = "^3.0.16", optional = true}
nglview = {version = "^3.0.1", optional = true}
ase = {version = "^3.21.1", optional = true}

[tool.poetry.extras]
vis = ["vtk"]
tutorial = ["jupyterlab", "nglview", "ase"]

[tool.poetry.dev-dependencies]
black = "^21.4b2"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
