[project]
name = "gbmaker"
version = "0.2.0"
description = "A grain boundary generator built on top of pymatgen"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pymatgen>=2025.3.10",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
vis = [
    "vtk>=9.4.1",
]
tutorial = [
    "ase>=3.24.0",
    "jupyterlab>=4.3.6",
    "nglview>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
